modify files structure

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/assets/css/style.css">
     <title>CSS Positions</title>
 </head>
 <body>
@@ -11,20 +11,20 @@
 
 
         <div class="tutorial">
-            <img src="./imgs/nav.png" alt="" class="logo">
+            <img src="./assets/imgs/nav.png" alt="" class="logo">
             <b>TUTORIAL</b>
         </div>
 
         <H1>How to Add Custon CSS</H1>
 
 
-        <img src="./imgs/grid.png" alt="" class="gird">
-        <img src="./imgs/design.png" alt="" class="design">
+        <img src="./assets/imgs/grid.png" alt="" class="gird">
+        <img src="./assets/imgs/design.png" alt="" class="design">
         <b class="design-txt">Design</b>
-        <img src="./imgs/arc.png" alt="" class="arc">
-        <img src="./imgs/cursor.png" alt="" class="cursor">
-        <img src="./imgs/glob.png" alt="" class="web">
-        <img src="./imgs/box.png" alt="" class="box">
+        <img src="./assets/imgs/arc.png" alt="" class="arc">
+        <img src="./assets/imgs/cursor.png" alt="" class="cursor">
+        <img src="./assets/imgs/glob.png" alt="" class="web">
+        <img src="./assets/imgs/box.png" alt="" class="box">
 
 
     </div>
